<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AboutUsFragment">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:id="@+id/top_section"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="-5dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/main_image"
                        android:layout_width="match_parent"
                        android:layout_height="232dp"
                        android:background="@drawable/about_main_background"/>

                    <RelativeLayout
                        android:id="@+id/menu_relative"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        >


                        <TextView
                            android:id="@+id/home_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about"
                            android:textSize="36dp"
                            android:textColor="@color/white"
                            android:fontFamily="@font/monserrat_bold"
                            android:layout_centerHorizontal="true"/>



                    </RelativeLayout>
                </RelativeLayout>

                <androidx.cardview.widget.CardView
                    android:layout_marginTop="-20dp"
                    android:id="@+id/main_content_background"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/top_section"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="24dp"
                    >
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/whenEstablished"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/aboutUsHeading"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="11dp"
                        android:gravity="center_horizontal"
                        android:layout_marginTop="32dp"
                        android:textSize="18sp"
                        android:textColor="@color/orange"
                        android:fontFamily="@font/montserrat_semi_bold"
                        />
                    <ImageView
                        android:id="@+id/aboutUsContentImage"
                        android:layout_marginTop="14dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/whenEstablished"
                        android:background="@drawable/kzn_blind_and_deaf_society_scaled_11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/aboutUsParagraph"
                        android:layout_below="@id/aboutUsContentImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:textSize="18sp"
                        android:layout_marginTop="24dp"
                        android:layout_marginLeft="18dp"
                        android:layout_marginRight="18dp"
                        android:gravity="center_horizontal"
                        android:text="@string/aboutUsParagraph"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/statementRecycler"
                        android:layout_below="@id/aboutUsParagraph"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        />
                    <TextView
                        android:id="@+id/titleAboutUs"
                        android:layout_below="@id/statementRecycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/MemberTitle"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="11dp"
                        android:gravity="center_horizontal"
                        android:layout_marginTop="36dp"
                        android:textSize="18sp"
                        android:textColor="@color/orange"
                        android:fontFamily="@font/montserrat_semi_bold"
                        />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/memberRecycler"
                        android:layout_below="@id/titleAboutUs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="13dp"
                        android:layout_marginBottom="20dp"
                        />
</RelativeLayout>

                </androidx.cardview.widget.CardView>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>