<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:openDrawer="left"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="-30dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/nav_bar">
    <FrameLayout
        android:id="@+id/content_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dp"
        >

    </FrameLayout>



</RelativeLayout>
</androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:id="@+id/nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@drawable/nav_bar_bottom"/>
        <LinearLayout
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4">

            <RelativeLayout
                android:id="@+id/home_relative"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/home_icon"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/home_icon"
                    />

                <ImageView
                    android:id="@+id/home_underline"
                    android:layout_width="15dp"
                    android:layout_height="3dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/home_icon"/>


                <TextView
                    android:id="@+id/home_nav_txt"
                    android:layout_below="@id/home_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home"
                    android:textSize="11sp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:layout_centerHorizontal="true"
                    />


            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/shopping_relative"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/shopping_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/shopping_bag_icon"
                    />

                <ImageView
                    android:id="@+id/shopping_underline"
                    android:layout_width="15dp"
                    android:layout_height="3dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/shopping_icon"/>

                <TextView
                    android:id="@+id/shopping_nav_txt"
                    android:layout_below="@id/shopping_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:textSize="11sp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:text="@string/shop"
                    />


            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/event_relative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/event_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/events_icon"
                    />

                <ImageView
                    android:id="@+id/event_underline"
                    android:layout_width="15dp"
                    android:layout_height="3dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/event_icon"/>

                <TextView
                    android:id="@+id/event_nav_txt"
                    android:layout_below="@id/event_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="4dp"
                    android:textSize="11sp"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:text="@string/events"
                    />


            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/about_relative"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/about_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/about_us_icon"
                    />
                <ImageView
                    android:id="@+id/about_underline"
                    android:layout_width="15dp"
                    android:layout_height="3dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/about_icon"/>

                <TextView
                    android:id="@+id/about_nav_txt"
                    android:layout_below="@id/about_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/about"
                    android:layout_marginTop="4dp"
                    android:textSize="11sp"
                    android:fontFamily="@font/montserrat_semi_bold"
                    />


            </RelativeLayout>
        </LinearLayout>

    </RelativeLayout>
    </RelativeLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"

        app:menu="@menu/activity_main_drawer" />

    </androidx.drawerlayout.widget.DrawerLayout>